+ fixed overflow issues in projects and index.

--- a/css/go-classroom.css
+++ b/css/go-classroom.css
@@ -91,6 +91,7 @@ SITE INDEX HEAD
 .index-grid {
     display    : block;
     text-align : center;
+    overflow-x: hidden;
 }
 
 #musicvid, #pres { width: 1000px; }
